--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./04-blackjack-vite/
+          source: ./04-blackjack-vite/docs/
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
